Thu Feb  3 08:38:22 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/run_all_list.pm:
          Disable the $TAO_ROOT/orbsvcs/tests/Event/* tests under single
          threaded builds because the tests do indeed use threads.

Wed Feb  2 23:35:19 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * ace/OS.cpp (thr_create): Added a cast to (long) for
          PRIORITY_MAX so that the types will be consistent for the
          ace_min() function.  Thanks to James Briggs
          <James.Briggs@dsto.defence.gov.au> for reporting this.

Wed Feb 02 21:56:32 2000  David L. Levine  <levine@cs.wustl.edu>

        * bin/check_build_logs: added -p option to check Purify
          output for anomaly and leak reports.

Wed Feb 02 16:29:19 2000  David L. Levine  <levine@cs.wustl.edu>

        * ace/OS.cpp (lwp_getparam): if the LWP is in the TS
          class, set the policy to ACE_SCHED_OTHER instead of
          ACE_SCHED_RR.  That's the only thread scheduling policy
          that's supported in TS class on Solaris, where this function
          can be used.  Thanks to Chris Gill for tracking this bug down.

Wed Feb 02 12:46:53 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/OS.cpp (open): Changed to determine whether files should be
          opened using FILE_SHARE_DELETE flag on Win32 at runtime.  This
          allows ace libraries built for Win95/98 work correctly on NT.
          Thanks to Alex Chachanashvili <achacha@panix.com> for reporting
          this. [Bug 419]

        * ace/OS.{h,i,cpp}:  Added a static data member of type
          OSVERSIONINFO on win32 and initialize it in
          ACE_OS_Object_Manager::init to cache the OS version
          informaiton.

Wed Feb  2 11:08:33 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * ace/Thread.h: Clarified that cancel() is only portable
          on platforms that support cancellation.  Thanks to Jason
          Czavislak <jczavislak@osprey.smcm.edu> for motivating this.
